--- a/frontend/react-app/src/styles/body.css
+++ b/frontend/react-app/src/styles/body.css
@@ -10,3 +10,78 @@
     width: 100%;
     height: 100vh;
 }
+
+.hero-content {
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    gap: 3rem;
+}
+
+.landing-page-animation {}
+
+.hero-text {
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.hero-img {
+    width: 25rem;
+    max-width: 55%;
+    min-height: 86vh;
+    max-height: 20rem;
+    position: relative;
+    overflow: hidden;
+
+    background-color: #141313;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: .5rem;
+}
+
+.cover-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: transform 0.5s;
+}
+
+.hero-content h1 {
+    font-size: 2.5rem;
+    font-weight: 800;
+
+}
+
+.hero-content p {
+    font-size: 1.2rem;
+    font-weight: 400;
+
+}
+
+.getStartedBtn {
+    padding: .8rem .9rem;
+    background-color: #f5a47b;
+    color: #232121;
+    border: none;
+    border-radius: 0.5rem;
+    font-size: .9rem;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.getStartedBtn:hover {
+    background-color: #f5c2a9;
+    color: #232121;
+}
