--- a/frontend/react-app/src/styles/header.css
+++ b/frontend/react-app/src/styles/header.css
@@ -10,7 +10,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #131d22;
+    background-color: rgb(8, 10, 11);
     color: #262626;
     width: 100%;
     height: 3.4rem;
