--- a/frontend/react-app/src/styles/body.css
+++ b/frontend/react-app/src/styles/body.css
@@ -2,13 +2,14 @@
     background-color: #070b0e;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     color: #fff;
     text-align: center;
     font-size: 1rem;
     font-weight: 700;
     width: 100%;
     height: 100vh;
+    margin-top: 2rem;
 }
 
 .hero-content {
@@ -19,6 +20,7 @@
     width: 100%;
     height: 100vh;
     gap: 3rem;
+    padding: 0 0 0 3rem;
 }
 
 .landing-page-animation {}
@@ -28,15 +30,15 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 
 }
 
 .hero-img {
-    width: 25rem;
-    max-width: 55%;
-    min-height: 86vh;
+    min-width: 26rem;
+    max-width: 85%;
+    min-height: 89vh;
     max-height: 20rem;
     position: relative;
     overflow: hidden;
@@ -59,12 +61,12 @@
 }
 
 .hero-content h1 {
-    font-size: 2.5rem;
+    font-size: 2.8rem;
     font-weight: 800;
-
+    margin-bottom: -15px;
 }
 
-.hero-content p {
+.hero-content .welcome-slogan {
     font-size: 1.2rem;
     font-weight: 400;
 
