--- a/frontend/react-app/src/styles/header.css
+++ b/frontend/react-app/src/styles/header.css
@@ -14,6 +14,10 @@
     color: #262626;
     width: 100%;
     height: 3.4rem;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    margin-bottom: 2rem;
 }
 
 .app-nav nav a {
