--- a/frontend/react-app/src/styles/header.css
+++ b/frontend/react-app/src/styles/header.css
@@ -22,7 +22,7 @@
     margin-bottom: 2rem;
 }
 
-.app-nav nav a {
+.app-nav nav .header-titles a {
     color: #fff;
     text-decoration: none;
     font-size: .95rem;
@@ -31,19 +31,19 @@
     border-radius: 8px;
 }
 
-.app-nav nav a:hover {
+.app-nav nav .header-titles a:hover {
     color: #fcd4d4;
     animation: color-fade-in .3s linear;
     animation-fill-mode: forwards;
 }
 
-.app-nav nav ul {
+.app-nav nav .header-titles {
     display: flex;
     list-style: none;
     gap: .1rem;
 }
 
-.app-nav nav ul li {
+.app-nav nav .header-titles li {
     padding: 0.5rem;
 
 }
@@ -125,13 +125,14 @@
         flex-direction: column;
         gap: 1rem;
         position: absolute;
-        top: 3.4rem;
+        top: 3rem;
         right: 0;
         background-color: #171a1c;
         width: 100%;
         /* max-height: 0; */
         height: 100vh;
         padding: 1rem;
+        z-index: 10000;
         /* transition: max-height 0.5s ease-in-out; */
 
     }
@@ -143,6 +144,7 @@
         margin: .5rem 1rem;
         border-radius: 8px;
         font-weight: 500;
+        text-decoration: none;
 
     }
 
