--- a/frontend/react-app/src/styles/body.css
+++ b/frontend/react-app/src/styles/body.css
@@ -20,7 +20,7 @@
     width: 100%;
     height: 100vh;
     gap: 1rem;
-    padding: 0 0 0 3rem;
+    padding: 0 2rem;
 }
 
 .landing-page-animation {}
@@ -78,6 +78,7 @@
     padding: .8rem .9rem;
     background-color: #f5a47b;
     color: #232121;
+    color: #fff;
     border: none;
     border-radius: 0.5rem;
     font-size: .9rem;
