--- a/frontend/react-app/src/styles/login.css
+++ b/frontend/react-app/src/styles/login.css
@@ -73,7 +73,7 @@ body {
     outline: none;
     width: 100%;
     color: #111;
-    background-color: aliceblue;
+    background-color: rgb(244, 244, 244);
     box-shadow: 0 0 30px 0 rgba(147, 147, 147, 0.1);
 }
 
@@ -124,7 +124,8 @@ form h2 {
 
 .tool {
     position: absolute;
-    top: 0rem;
+    top: -.5rem;
     right: -1rem;
     z-index: 100;
+    width: 150px;
 }
