--- a/frontend/react-app/src/styles/signup.css
+++ b/frontend/react-app/src/styles/signup.css
@@ -41,7 +41,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 25rem;
-    height: 70%;
+    height: 80%;
     background-color: #000;
     border-radius: 10px;
     box-shadow: 0 0 10px 0 rgba(147, 147, 147, 0.1);
@@ -73,7 +73,7 @@ body {
     outline: none;
     width: 100%;
     color: #111;
-    background-color: aliceblue;
+    background-color: rgb(244, 244, 244);
     box-shadow: 0 0 30px 0 rgba(147, 147, 147, 0.1);
 }
 
@@ -126,5 +126,12 @@ form h2 {
     position: absolute;
     top: 0rem;
     right: -1rem;
+    z-index: 100;
+}
+
+.gear-icon {
+    position: absolute;
+    top: .5rem;
+    right: -.5rem;
     z-index: 100;
 }
