--- a/frontend/react-app/src/styles/body.css
+++ b/frontend/react-app/src/styles/body.css
@@ -1,5 +1,5 @@
 .hero {
-    background-color: #000e16;
+    background-color: rgb(26, 26, 26);
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -8,8 +8,8 @@
     font-size: 1rem;
     font-weight: 700;
     width: 100%;
-    height: 100vh;
-    margin-top: 2rem;
+    height: 90vh;
+    margin-top: -3.4rem;
 }
 
 .hero-content {
@@ -20,7 +20,7 @@
     width: 100%;
     height: 100vh;
     gap: 1rem;
-    padding: 0 2rem;
+    padding: 0 0 0 2.5rem;
 }
 
 .landing-page-animation {}
@@ -33,7 +33,7 @@
     align-items: flex-start;
     justify-content: center;
     max-width: 32rem;
-
+    margin-top: 1rem;
 }
 
 .hero-img {
@@ -76,9 +76,9 @@
 
 .getStartedBtn {
     padding: .8rem .9rem;
-    background-color: #f5a47b;
+    background-color: #92e3a9;
     color: #232121;
-    color: #fff;
+    /* color: #fff; */
     border: none;
     border-radius: 0.5rem;
     font-size: .9rem;
@@ -87,7 +87,7 @@
 }
 
 .getStartedBtn:hover {
-    background-color: #f5c2a9;
+    background-color: #b0f5c4;
     color: #232121;
 }
 
@@ -146,4 +146,18 @@
     .hero-content .welcome-slogan {
         font-size: 1rem;
     }
+}
+
+.triangle-ill {
+    position: absolute;
+    top: 0rem;
+    left: 0;
+
+}
+
+.chains-ill {
+    position: absolute;
+    top: 2rem;
+    left: 40%;
+    margin: 0 auto;
 }
