--- a/frontend/react-app/src/styles/header.css
+++ b/frontend/react-app/src/styles/header.css
@@ -11,6 +11,7 @@
     align-items: center;
     padding: 10px 20px;
     background-color: rgb(8, 10, 11);
+    background-color: rgb(6, 8, 9);
     color: #262626;
     width: 100%;
     height: 3.4rem;
@@ -31,7 +32,7 @@
     border-radius: 8px;
 }
 
-.app-nav nav .header-titles a:hover {
+.app-nav nav .header-titles li:hover {
     color: #fcd4d4;
     animation: color-fade-in .3s linear;
     animation-fill-mode: forwards;
@@ -45,7 +46,11 @@
 
 .app-nav nav .header-titles li {
     padding: 0.5rem;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.1rem;
+    border-radius: 4px;
 }
 
 .app-nav .logo img {
@@ -63,7 +68,7 @@
 .loginArea .loginBtn,
 .signupBtn {
     padding: 0.5rem 1rem;
-    background-color: #f5a47b;
+    background-color: #92e3a9;
     color: #262626;
     border: none;
     border-radius: 5px;
@@ -77,7 +82,7 @@
 }
 
 .loginBtn:hover {
-    background-color: #ffd6c1;
+    background-color: #aee7be;
 
 }
 
@@ -85,6 +90,10 @@
     animation: color-fade-in .3s linear;
     animation-fill-mode: forwards;
     background-color: transparent;
+}
+
+.header-title-icon {
+    width: 1.1rem;
 }
 
 @keyframes color-fade-in {
