--- a/frontend/react-app/src/styles/signup.css
+++ b/frontend/react-app/src/styles/signup.css
@@ -117,7 +117,7 @@ body {
 }
 
 form h2 {
-    color: #ffffff;
+    color: #0c0c0c;
     font-size: 2rem;
     margin-bottom: 1rem;
 }
@@ -134,4 +134,50 @@ form h2 {
     top: .5rem;
     right: -.5rem;
     z-index: 100;
+}
+
+.group {
+    display: flex;
+    line-height: 30px;
+    align-items: center;
+    position: relative;
+    width: 80%;
+}
+
+.signup-container .input {
+    width: 100%;
+    height: 45px;
+    line-height: 30px;
+    padding: 0 5rem;
+    padding-left: 3rem;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    outline: none;
+    background-color: #f8fafc;
+    color: #0d0c22;
+    transition: .5s ease;
+    margin-bottom: 1rem;
+}
+
+.signup-container .input::placeholder {
+    color: #94a3b8;
+}
+
+.signup-container .input:focus,
+input:hover {
+    outline: none;
+    border-color: rgba(129, 140, 248);
+    background-color: #fff;
+    box-shadow: 0 0 0 5px rgb(129 140 248 / 30%);
+}
+
+.icon {
+    position: absolute;
+    left: 0.8rem;
+    margin: auto 0;
+    fill: black;
+    width: 1.3rem;
+    height: auto;
+    z-index: 100;
+    top: 0.8rem;
 }
