--- a/frontend/react-app/src/styles/header.css
+++ b/frontend/react-app/src/styles/header.css
@@ -27,7 +27,7 @@
     color: #fff;
     text-decoration: none;
     font-size: .95rem;
-    font-weight: 500;
+    font-weight: 501;
     padding: .5rem .6rem;
     border-radius: 8px;
 }
@@ -54,8 +54,8 @@
 }
 
 .app-nav .logo img {
-    width: 4rem;
-    height: 4rem;
+    max-width: 2.3rem;
+    height: auto;
 }
 
 .loginArea {
