--- a/frontend/react-app/src/styles/homeInputs.css
+++ b/frontend/react-app/src/styles/homeInputs.css
@@ -11,9 +11,9 @@
 }
 
 .home-inputs-title {
-    font-size: 1rem;
+    font-size: .95rem;
     font-weight: 600;
-    color: #fff;
+    color: #2d2d2d;
     text-align: left;
     width: 100%;
 }
@@ -23,7 +23,7 @@
     position: relative;
 }
 
-.home-inputs input {
+.home-inputs .input input {
     width: 100%;
     padding: 15px 30px;
     margin: 7px 0;
@@ -32,6 +32,8 @@
     outline: none;
     font-size: .9rem;
     position: relative;
+    background-color: rgb(228, 228, 228);
+    box-shadow: 0 10px 10px 0px rgba(147, 147, 147, 0.1);
 }
 
 .input-icons {
