--- a/frontend/react-app/src/styles/services-body.css
+++ b/frontend/react-app/src/styles/services-body.css
@@ -5,6 +5,7 @@
     background-color: #1e1e1e;
     color: #232121;
     position: relative;
+    padding-top: 1rem;
 }
 
 .services-container {
@@ -24,12 +25,12 @@
     padding: 1rem;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 1.5rem;
     flex-wrap: wrap;
 }
 
 .services-container h1 {
-    font-size: 2.6rem;
+    font-size: 2.3rem;
 }
 
 .service {
@@ -97,6 +98,7 @@
     z-index: 100;
     width: 9rem;
     top: -2.2rem;
+    display: none;
 }
 
 .screwdriver-ill-2 {
@@ -108,4 +110,15 @@
     z-index: 100;
     width: 9rem;
     top: -2.2rem;
+    display: none;
+}
+
+.services-header {
+    display: flex;
+    max-width: 100%;
+    gap: .4rem;
+}
+
+.services-header .gear-icon {
+    max-width: 2rem;
 }
