--- a/frontend/react-app/src/styles/signup.css
+++ b/frontend/react-app/src/styles/signup.css
@@ -24,7 +24,8 @@ body {
     overflow: hidden;
 }
 
-.signup-form form {
+.signup-form form,
+.signup-provider-form form {
     width: 100%;
     margin: auto;
     display: flex;
@@ -35,7 +36,8 @@ body {
     z-index: 2;
 }
 
-.signup-form {
+.signup-form,
+.signup-provider-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,7 +51,8 @@ body {
     overflow: hidden;
 }
 
-.signup-form .form-group {
+.signup-form .form-group,
+.signup-provider-form .form-group {
     display: flex;
     flex-direction: column;
     width: 80%;
@@ -57,7 +60,8 @@ body {
 
 }
 
-.signup-form .form-group label {
+.signup-form .form-group label,
+.signup-provider-form .form-group label {
     font-size: 14px;
     font-weight: 600;
     margin-bottom: 1px;
@@ -65,7 +69,8 @@ body {
 
 }
 
-.signup-form .form-group input {
+.signup-form .form-group input,
+.signup-provider-form .form-group input {
     padding: 10px;
     border: 0px solid #ccc;
     border-radius: 5px;
@@ -77,7 +82,8 @@ body {
     box-shadow: 0 0 30px 0 rgba(147, 147, 147, 0.1);
 }
 
-.signup-form .signup-btn {
+.signup-form .signup-btn,
+.signup-provider-form .signup-btn {
     padding: 10px 17px;
     border: none;
     border-radius: 5px;
@@ -120,6 +126,15 @@ form h2 {
     color: #0c0c0c;
     font-size: 2rem;
     margin-bottom: 1rem;
+    text-align: center;
+}
+
+.signup-provider-form h2 {
+    color: #efe6e6;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    text-align: center;
+
 }
 
 .tool {
@@ -129,7 +144,8 @@ form h2 {
     z-index: 100;
 }
 
-.gear-icon {
+.signup-form .gear-icon,
+.signup-container .gear-icon {
     position: absolute;
     top: .5rem;
     right: -.5rem;
@@ -144,6 +160,7 @@ form h2 {
     width: 80%;
 }
 
+.signup-container .input,
 .signup-container .input {
     width: 100%;
     height: 45px;
@@ -181,3 +198,5 @@ input:hover {
     z-index: 100;
     top: 0.8rem;
 }
+
+.service-provider-form {}
