--- a/frontend/react-app/src/styles/profile.css
+++ b/frontend/react-app/src/styles/profile.css
@@ -1,5 +1,5 @@
 .profile-area {
-    width: 100%;
+    max-width: 100%;
     height: auto;
     min-height: 100%;
     margin-top: 5rem;
@@ -14,30 +14,18 @@
 }
 
 .profile-area>div {
-    width: 100%;
-    height: 30rem;
+    /* width: 100%;
+    height: 30rem; */
     background-color: #fff;
     border-radius: 6px;
     padding: 1rem;
     box-shadow: 0 10px 10px 0px rgba(147, 147, 147, 0.1);
 }
 
-.profile-area .profile-image-name {
-    flex: 0 0 15%;
-}
 
-.profile-area .profile-details {
-    flex: 0 0 100%;
-    min-width: 12rem;
-}
-
-.profile-area .vehicle-details {
-    flex: 0 0 100%;
-    min-width: 15rem;
-}
 
 .profile-area .profile-image-name {
-    flex: 0 0 20%;
+    flex: 0 0 18%;
     max-height: 15rem;
     display: flex;
     align-items: center;
@@ -46,6 +34,36 @@
     overflow: hidden;
     position: relative;
     align-self: flex-start;
+}
+
+.profile-area .profile-image-name {
+    flex: 1;
+    width: 18%;
+    height: auto;
+    min-height: 33rem;
+}
+
+.profile-area .profile-details,
+.profile-area .vehicle-details {
+    flex: 2;
+    width: 30%;
+    height: auto;
+    min-height: 33rem;
+}
+
+.profile-area .history {
+    width: 77.7%;
+    height: auto;
+    min-height: 33rem;
+    margin-left: auto;
+}
+
+.profile-area .profile-details h3,
+.profile-area .vehicle-details h3,
+.profile-area .history h3 {
+    font-size: 1.5rem;
+    color: #2d2d2d;
+    margin-top: 1rem;
 }
 
 .edit-profile {
@@ -83,13 +101,6 @@
     filter: grayscale(.3);
 }
 
-.profile-area .profile-details,
-.profile-area .vehicle-details {
-    flex: 1;
-    height: auto;
-    min-height: 33rem;
-    /* Grow and shrink as needed to take up the remaining space */
-}
 
 .profile-area .profile-image-name .profile-image {
     display: flex;
@@ -116,12 +127,6 @@
     margin-top: 1rem;
 }
 
-.profile-area .profile-details h3,
-.profile-area .vehicle-details h3 {
-    font-size: 1.5rem;
-    color: #2d2d2d;
-    margin-top: 1rem;
-}
 
 /* styling the personal details */
 
