--- a/frontend/react-app/src/styles/header.css
+++ b/frontend/react-app/src/styles/header.css
@@ -142,13 +142,15 @@
         height: 100vh;
         padding: 1rem;
         z-index: 10000;
+        list-style: none;
+        display: none;
         /* transition: max-height 0.5s ease-in-out; */
 
     }
 
     .mobile-header-titles li a {
         color: #fff;
-        font-size: 2.3rem;
+        font-size: 2rem;
         padding: .5rem .6rem;
         margin: .5rem 1rem;
         border-radius: 8px;
