--- a/frontend/react-app/src/styles/header.css
+++ b/frontend/react-app/src/styles/header.css
@@ -24,7 +24,7 @@
 }
 
 .app-nav nav .header-titles a {
-    color: #fff;
+    color: #444;
     text-decoration: none;
     font-size: .95rem;
     font-weight: 501;
