--- a/frontend/react-app/src/styles/profile.css
+++ b/frontend/react-app/src/styles/profile.css
@@ -230,6 +230,12 @@
     font-size: 1rem;
 }
 
+@media screen and (max-width: 970px) {
+    .profile-area {
+        margin-top: 1rem;
+    }
+}
+
 @media screen and (max-width: 868px) {
     .profile-area {
         flex-direction: column;
