--- a/frontend/react-app/src/styles/Footer.css
+++ b/frontend/react-app/src/styles/Footer.css
@@ -22,17 +22,21 @@ a>p:hover {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
     padding: 1rem;
     gap: 5rem;
     background-color: #e4e4e4;
+    height: auto;
+    position: absolute;
+    width: 100%;
 }
 
 .footerLogo {
     display: flex;
     align-items: center;
     justify-content: center;
+    display: none;
 }
 
 .usefullLinks {
@@ -42,9 +46,10 @@ a>p:hover {
 }
 
 .footer .set1,
-.footer .set2 {
+.footer .set2,
+.footer .set3 {
     flex: 2;
-    width: 20%;
+    width: 30%;
     align-self: flex-start;
 }
 
@@ -55,7 +60,7 @@ a>p:hover {
     align-items: center;
     justify-content: flex-start;
     width: 100%;
-    padding: 0 3rem;
+    padding: 0 0rem;
     margin-top: -3rem;
 }
 
