--- a/frontend/react-app/src/styles/header.css
+++ b/frontend/react-app/src/styles/header.css
@@ -12,6 +12,7 @@
     padding: 10px 20px;
     background-color: rgb(8, 10, 11);
     background-color: rgb(6, 8, 9);
+    background-color: #a7bfbe;
     color: #262626;
     width: 100%;
     height: 3.4rem;
