--- a/frontend/react-app/src/styles/modeSwitcher.css
+++ b/frontend/react-app/src/styles/modeSwitcher.css
@@ -16,6 +16,7 @@ body {
     padding: 4px 2px;
     background-color: #e5ffff;
     transition: background-color 0.6s ease-out;
+    display: none;
 }
 
 .outer_circle {
