--- a/frontend/react-app/src/styles/body.css
+++ b/frontend/react-app/src/styles/body.css
@@ -1,5 +1,6 @@
 .hero {
     background-color: rgb(26, 26, 26);
+    background-color: #e5efef;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -7,9 +8,10 @@
     text-align: center;
     font-size: 1rem;
     font-weight: 700;
-    width: 100%;
-    height: 90vh;
-    margin-top: -6.6rem;
+    width: 93%;
+    height: 40rem;
+    margin: 0 auto;
+
 }
 
 .hero-content {
@@ -20,16 +22,18 @@
     width: 100%;
     height: 100vh;
     gap: 1rem;
-    padding: 0 0 0 2.5rem;
+
     position: relative;
     z-index: 100;
+    margin-top: -5rem;
+    background-color: #e5efef;
 }
 
 .content-bg {
     position: absolute;
-    max-width: 40rem;
+    max-width: 47em;
     z-index: -1;
-    left: -2rem;
+    left: -4rem;
 }
 
 .landing-page-animation {}
@@ -41,8 +45,8 @@
     gap: 1rem;
     align-items: flex-start;
     justify-content: center;
-    max-width: 32rem;
-    margin-top: 1rem;
+    max-width: 37rem;
+
 }
 
 .hero-img {
@@ -75,6 +79,7 @@
     font-weight: 700;
     margin-bottom: -15px;
     text-align: left;
+    line-height: 2.5rem;
 }
 
 .hero-content .welcome-slogan {
@@ -102,8 +107,9 @@
 }
 
 .objects {
-    max-width: 100%;
+    width: 45rem;
     height: auto;
+    margin-top: -1rem;
 }
 
 @media (max-width: 1100px) {
@@ -133,6 +139,8 @@
         padding-left: 1rem;
         min-height: 100%;
         height: auto;
+        margin-top: 6rem;
+        max-width: 100%;
     }
 
     .hero-text {
@@ -156,18 +164,19 @@
     .hero-content .welcome-slogan {
         font-size: 1rem;
     }
+
 }
 
 .triangle-ill {
     position: absolute;
     top: 0rem;
     left: 0;
-
+    display: none;
 }
 
 .chains-ill {
     position: absolute;
-    top: 2rem;
-    left: 40%;
+    top: 0;
+    left: 50%;
     margin: 0 auto;
 }
