--- a/frontend/react-app/src/styles/body.css
+++ b/frontend/react-app/src/styles/body.css
@@ -1,6 +1,6 @@
 .hero {
-    background-color: rgb(26, 26, 26);
-    background-color: #e5efef;
+    /* background-color: rgb(26, 26, 26);
+    background-color: #e5efef; */
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -25,7 +25,7 @@
 
     position: relative;
     z-index: 100;
-    margin-top: -5rem;
+    margin-top: -6rem;
     background-color: #e5efef;
 }
 
